crates/iota/tests/snapshots/shell_tests__new_tests__new_then_build.sh.snap
---
source: crates/iota/tests/shell_tests.rs
description: tests/shell_tests/new_tests/new_then_build.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# Modifications Copyright (c) 2024 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

# tests that iota move new followed by iota move build succeeds

iota move new example

# we mangle the generated toml file to replace the framework dependency with a local dependency
FRAMEWORK_DIR=$(echo $CARGO_MANIFEST_DIR | sed 's#/crates/iota##g')
cat example/Move.toml \
  | sed 's#\(IOTA = .*\)git = "[^"]*", \(.*\)#\1\2#' \
  | sed 's#\(IOTA = .*\), rev = "[^"]*"\(.*\)#\1\2#' \
  | sed 's#\(IOTA = .*\)subdir = "\([^"]*\)"\(.*\)#\1local = "FRAMEWORK/\2"\3#' \
  | sed "s#\(IOTA = .*\)FRAMEWORK\(.*\)#\1$FRAMEWORK_DIR\2#" \
  > Move.toml
mv Move.toml example/Move.toml

cd example && iota move build

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
INCLUDING DEPENDENCY IOTA
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
